@@ -1,12 +1,11 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA512
 
-DIST Attest-0.5.2.tar.gz 35835 RMD160 af93d4dae3eff463ec30c29d39f7fc7d24027363 SHA1 cb43e9be7b38d08310e68f816a528992bb379469 SHA256 960643d3fa4da449f3d2cd088ec0a92892feffefe0f576721d61b253fa2b8213
 DIST Attest-0.5.3.tar.gz 36269 RMD160 e35589a8377f7763f93c9b37d9d8723443940c27 SHA1 5f932557583dd89bf47463cf73a3d6c22417f76b SHA256 1be3f3bb9129c48d15f6497cde1caa1c7d30f8c438e7eeb77e729d2aab1be0df
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEAREKAAYFAk9aXQkACgkQzJrj3cAXR0mbuACeI632DBHOhVpT0jXIjumFmOuO
-IvoAnis9N3hyKoY6pf4Hiq24GHnU7phv
-=V5L8
+iEYEAREKAAYFAk+BMR4ACgkQzJrj3cAXR0kRcQCgghxN+EqldXz22dWj9z5CMY1K
+ThYAoKime55afR4MeZQmyA4miprazHaV
+=HbD9
 -----END PGP SIGNATURE-----
