@@ -4,10 +4,10 @@ DESCRIPTION=Modern, Pythonic unit testing
 EAPI=4
 HOMEPAGE=http://pypi.python.org/pypi/Attest/
 IUSE=minimal test
-KEYWORDS=amd64 ~x86
+KEYWORDS=amd64 x86
 LICENSE=BSD-2
 RDEPEND=!minimal? ( dev-python/lxml dev-python/progressbar dev-python/pygments || ( >=dev-lang/python-2.6 dev-python/simplejson ) ) dev-lang/python
 SLOT=0
 SRC_URI=mirror://pypi/A/Attest/Attest-0.5.3.tar.gz
 _eclasses_=distutils	15ae23f6f8219a009bfcfff7724fe727	eutils	6891f6f484e3b44a0a15e1b0c0fc9a14	jnrowe-pypi	c6b06bd5e6250ef1ef368932ebd260cf	multilib	5f4ad6cf85e365e8f0c6050ddd21659e	python	36d7e2b7aa4dce62364c72eec96610cf	toolchain-funcs	6526ac6fc9aedf391efb91fcd75ace68	user	32a09e82e2f592bf88ad2fd08525166e
-_md5_=6ae658b52a45623e9c4437d6adcb8908
+_md5_=2452ed10421fe2e3b21224514bedad58
