@@ -1,4 +1,3 @@
-REM 2012-04-08 *1 MSG %"Stabilise x86 dev-python/attest-0.5.3%" %a
 REM 2012-04-08 *1 MSG %"Stabilise x86 games-puzzle/gbrainy-2.1.2%" %a
 REM 2012-04-08 *1 MSG %"Stabilise x86 dev-python/sure-0.10.0%" %a
 REM 2012-04-16 *1 MSG %"Stabilise amd64 dev-vcs/gitflow-0.4.1-r2%" %a
