@@ -2,6 +2,10 @@
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  08 Apr 2012; James Rowe <jnrowe@gmail.com> -attest-0.5.2.ebuild,
+  attest-0.5.3.ebuild:
+  Keyworded x86.
+
   08 Apr 2012; James Rowe <jnrowe@gmail.com> attest-0.5.3.ebuild:
   Keyworded amd64.
 
